# final-project-assignment-micarray

./: CMakeLists.txt  LICENSE  README.md  main.c  mic_array.c  mic_array.h
